set03/problem04errorlogs.txt
problem04.c: In function 'find_fibo':
problem04.c:25:5: error: expected expression before '{' token
     {
     ^
problem04.c:35:1: error: expected declaration or statement at end of input
 }
 ^

 problem04.c: In function 'main':
problem04.c:11:14: error: expected expression before ')' token
     output(a,);
              ^